Added composer script for generating swagger json, edit some swagger annotations
