# public/swagger.json
@@ -6,7 +6,7 @@
     "termsOfService": "http://swagger.io/terms/",
     "version": "1.0.0"
   },
-  "host": "88.99.161.235",
+  "host": "velcom-rest.local",
   "basePath": "/",
   "schemes": [
     "http"
@@ -23,7 +23,7 @@
         "tags": [
           "contact"
         ],
-        "summary": "\u0414\u043e\u0431\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043a\u043e\u043d\u0442\u0430\u043a\u0442\u0430",
+        "summary": "Adding new contact",
         "description": "",
         "consumes": [
           "application/json",
@@ -37,7 +37,7 @@
           {
             "name": "body",
             "in": "body",
-            "description": "\u0414\u0430\u043d\u043d\u044b\u0435 \u043a\u043e\u043d\u0442\u0430\u043a\u0442\u0430",
+            "description": "Contact data",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Contacts"
@@ -46,31 +46,31 @@
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
-          "405": {
+          "400": {
             "description": "Invalid input"
           }
         }
       }
     },
     "/contact/{contactId}": {
-      "delete": {
+      "put": {
         "tags": [
           "contact"
         ],
-        "summary": "\u0423\u0434\u0430\u043b\u0435\u043d\u0438\u0435 \u043a\u043e\u043d\u0442\u0430\u043a\u0442\u0430",
+        "summary": "Update existing contact",
         "description": "",
         "consumes": [
           "application/json",
@@ -84,21 +84,73 @@
           {
             "name": "contactId",
             "in": "path",
-            "description": "\u0418\u0414 \u043a\u043e\u043d\u0442\u0430\u043a\u0442\u0430",
+            "description": "Contact Id",
             "required": true,
             "type": "string"
           },
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Contact data",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Contacts"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid input"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "contact"
+        ],
+        "summary": "Delete existing contact",
+        "description": "",
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "contactId",
+            "in": "path",
+            "description": "Contact id",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "signature",
+            "in": "header",
+            "description": "MAC signature",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "login",
+            "in": "header",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
@@ -115,26 +167,26 @@
         "tags": [
           "flat"
         ],
-        "summary": "\u041f\u043e\u043b\u0443\u0447\u0435\u043d\u0438\u0435 \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u0438 \u043f\u043e \u043a\u043e\u043d\u043a\u0440\u0435\u0442\u043d\u043e\u0439 \u043a\u0432\u0430\u0440\u0442\u0438\u0440\u0435",
+        "summary": "Getting flat info by id",
         "parameters": [
           {
             "name": "flatId",
             "in": "path",
-            "description": "\u0418\u0414 \u043a\u0432\u0430\u0440\u0442\u0438\u0440\u044b",
+            "description": "Flat id",
             "required": true,
             "type": "string"
           },
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC Signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
@@ -154,26 +206,26 @@
         "tags": [
           "flat"
         ],
-        "summary": "\u041f\u043e\u043b\u0443\u0447\u0435\u043d\u0438\u0435 \u0441\u043f\u0438\u0441\u043a\u0430 \u043a\u043e\u043d\u0442\u0430\u043a\u0442\u043e\u0432 \u043f\u043e \u043a\u0432\u0430\u0440\u0442\u0438\u0440\u0435",
+        "summary": "Returns flat contacts list",
         "parameters": [
           {
             "name": "flatId",
             "in": "path",
-            "description": "\u0418\u0414 \u043a\u0432\u0430\u0440\u0442\u0438\u0440\u044b",
+            "description": "Flat ID",
             "required": true,
             "type": "string"
           },
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC Signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
@@ -193,19 +245,19 @@
         "tags": [
           "house"
         ],
-        "summary": "\u0421\u043f\u0438\u0441\u043e\u043a \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0445 \u0430\u0434\u0440\u0435\u0441\u043e\u0432 (\u0434\u043e\u043c\u043e\u0432)",
+        "summary": "Returns house list",
         "parameters": [
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC Signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
@@ -225,26 +277,26 @@
         "tags": [
           "house"
         ],
-        "summary": "\u0421\u043f\u0438\u0441\u043e\u043a \u0434\u043e\u043c\u043e\u0432 \u043f\u043e \u043a\u043e\u043d\u043a\u0440\u0435\u0442\u043d\u043e\u0439 \u0443\u043b\u0438\u0446\u0435",
+        "summary": "House list by street id",
         "parameters": [
           {
             "name": "streetId",
             "in": "path",
-            "description": "\u0418\u0414 \u0443\u043b\u0438\u0446\u044b",
+            "description": "Street Id",
             "required": true,
             "type": "string"
           },
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC Signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
@@ -264,26 +316,26 @@
         "tags": [
           "house"
         ],
-        "summary": "\u0414\u0435\u0442\u0430\u043b\u0438\u0437\u0430\u0446\u0438\u044f \u043f\u043e \u043a\u043e\u043d\u043a\u0440\u0435\u0442\u043d\u043e\u043c\u0443 \u0430\u0434\u0440\u0435\u0441\u0443 (\u0434\u043e\u043c\u0443)",
+        "summary": "Getting house detail info by id",
         "parameters": [
           {
             "name": "houseId",
             "in": "path",
-            "description": "\u0418\u0414 \u0434\u043e\u043c\u0430",
+            "description": "House ID",
             "required": true,
             "type": "string"
           },
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC Signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
@@ -303,26 +355,26 @@
         "tags": [
           "house"
         ],
-        "summary": "\u0421\u043f\u0438\u0441\u043e\u043a \u043a\u0432\u0430\u0440\u0442\u0438\u0440 \u043f\u043e \u043a\u043e\u043d\u043a\u0440\u0435\u0442\u043d\u043e\u043c\u0443 \u0434\u043e\u043c\u0443",
+        "summary": "Flats list by house ID",
         "parameters": [
           {
             "name": "houseId",
             "in": "path",
-            "description": "\u0418\u0414 \u0434\u043e\u043c\u0430",
+            "description": "House id",
             "required": true,
             "type": "string"
           },
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC Signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
@@ -342,19 +394,19 @@
         "tags": [
           "street"
         ],
-        "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0441\u043f\u0438\u0441\u043e\u043a \u0443\u043b\u0438\u0446",
+        "summary": "Get street list",
         "parameters": [
           {
             "name": "signature",
             "in": "header",
-            "description": "\u0426\u0438\u0444\u0440\u043e\u0432\u0430\u044f \u043f\u043e\u0434\u043f\u0438\u0441\u044c",
+            "description": "MAC signature",
             "required": true,
             "type": "string"
           },
           {
             "name": "login",
             "in": "header",
-            "description": "\u041b\u043e\u0433\u0438\u043d",
+            "description": "Login",
             "required": true,
             "type": "string"
           }
@@ -374,7 +426,7 @@
         "tags": [
           "user"
         ],
-        "summary": "\u041c\u0435\u0442\u043e\u0434 \u0430\u0432\u0442\u043e\u0440\u0438\u0437\u0430\u0446\u0438\u0438",
+        "summary": "Login user",
         "description": "",
         "consumes": [
           "application/json",
@@ -391,7 +443,7 @@
             "description": "Login and password",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/Users"
             }
           }
         ],
@@ -406,27 +458,15 @@
   "definitions": {
     "Contacts": {
       "properties": {
-        "time": {
-          "type": "string",
-          "example": "12.05.18"
-        },
         "date": {
           "type": "string",
           "example": "12.05.18"
         },
-        "noteText": {
+        "note_text": {
           "type": "string",
           "example": "\u0442\u0435\u043a\u0441\u0442 \u043f\u0440\u0438\u043c\u0435\u0447\u0430\u043d\u0438\u044f"
         },
-        "nextDate": {
-          "type": "string",
-          "example": "23.08.18"
-        },
-        "status": {
-          "type": "string",
-          "example": "\u0441\u0442\u0430\u0442\u0443\u0441"
-        },
-        "flatId": {
+        "flat_id": {
           "type": "integer",
           "example": "1"
         },
